update: Extracting operations exercise

--- a/unit-1/12_introduction_to_pandas.ipynb
+++ b/unit-1/12_introduction_to_pandas.ipynb
@@ -109,19 +109,103 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
-        "#### Get the size an shape of the "
+        "# Your code here ⬇️\n",
+        "\n",
+        "# Display the results here here ⬇️\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "#### Get the size an shape of the sample"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Your code here ⬇️\n",
+        "\n",
+        "# Display the results here here ⬇️\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Provide a summary using info() and describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Your code here ⬇️\n",
+        "\n",
+        "# Display the results here here ⬇️\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4 Extracting operations\n",
+        "\n",
+        "Remember to check the lesson [4. Extracting operations](https://charlstown.github.io/ai-applied-education/program/unit-1/13-introduction-to-pandas/#4-extracting-operations) from the documentation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Counting populars\n",
+        "\n",
+        "Your manager asks you to extract specific columns from the dataset, including:\n",
+        "- artist_name\n",
+        "- track_name\n",
+        "- track_popularity\n",
+        "\n",
+        "Additionally, you're tasked with filtering the dataset to include only those rows where the `track_popularity` is over 90. Your final mission is to determine how many songs meet this popularity threshold."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Extract the specific columns here ⬇️\n",
+        "\n",
+        "# Display the results here ⬇️\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Filter the dataframe here ⬇️\n",
+        "\n",
+        "# Display the results here ⬇️\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Count the number of rows of the dataset here ⬇️\n",
+        "\n",
+        "# Display the results here ⬇️\n"
+      ]
     }
   ],
   "metadata": {
