update: clean files

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Rrrrrroar/ai-applied-practice/blob/main/unit-1/11_introduction_to_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -63,8 +63,16 @@
       "outputs": [],
       "source": [
         "# Write your variables here ⬇️\n",
+        "satellite_id = 53812079\n",
+        "satellite_name = \"Mooncake\"\n",
+        "orbit_altitude = 250630.48\n",
+        "is_active = False\n",
         "\n",
-        "# Print your variables here ⬇️\n"
+        "# Print your variables here ⬇️\n",
+        "print(satellite_id)\n",
+        "print(satellite_name)\n",
+        "print(orbit_altitude)\n",
+        "print(is_active)"
       ]
     },
     {
@@ -92,8 +100,16 @@
       "outputs": [],
       "source": [
         "# Write your variables here ⬇️\n",
+        "stock_symbol = \"BBVA\"\n",
+        "stock_price = 2300.\n",
+        "num_shares = 8\n",
+        "is_buy_order = True\n",
         "\n",
-        "# Print your variables here ⬇️\n"
+        "# Print your variables here ⬇️\n",
+        "print(stock_symbol)\n",
+        "print(stock_price)\n",
+        "print(num_shares)\n",
+        "print(is_buy_order)"
       ]
     },
     {
@@ -156,8 +172,14 @@
       "outputs": [],
       "source": [
         "# Write your patients lists here ⬇️\n",
+        "pat_jorge = [\"Depression\", 72.5, \"124\", False]\n",
+        "pat_martha = [\"Anxiety\", 89.2, \"089\", True]\n",
+        "pat_peter = [\"Bipolar Disorder\", 45.8, \"003\", True]\n",
         "\n",
-        "# Print your lists here ⬇️\n"
+        "# Print your lists here ⬇️\n",
+        "print(pat_jorge)\n",
+        "print(pat_martha)\n",
+        "print(pat_peter)"
       ]
     },
     {
@@ -200,8 +222,10 @@
       "outputs": [],
       "source": [
         "# Write your viruses dictionaries here ⬇️\n",
+        "virus_ebola = {\"Name\": \"Ebola Virus\", \"Origin\": \"Bats\", \"Mortality Rate\": 0.5, \"Has Vaccine\": False}\n",
         "\n",
-        "# Print your dictionaries here ⬇️\n"
+        "# Print your dictionaries here ⬇️\n",
+        "print(virus_ebola)"
       ]
     },
     {
@@ -273,9 +297,19 @@
       "outputs": [],
       "source": [
         "# Initial scores here ⬇️\n",
+        "social_engineering = 12\n",
+        "brute_force = 90\n",
+        "malware = 105.2\n",
+        "phishing = 42\n",
         "\n",
-        "\n",
-        "# Calculations here ⬇️\n"
+        "# Calculations here ⬇️\n",
+        "social_brute = social_engineering + brute_force\n",
+        "social_engineering_minored = social_engineering/2\n",
+        "social_brute_exp = social_brute**0.5\n",
+        "malware_coef = malware*1.5\n",
+        "hacker_score = phishing + social_engineering_minored + malware_coef + social_brute_exp\n",
+        "hacker_score = round(hacker_score, 2)\n",
+        "print(f\"The Hacker score of my company is {hacker_score}\")"
       ]
     },
     {
@@ -353,18 +387,35 @@
       "outputs": [],
       "source": [
         "# Total Number of characters in the text ⬇️\n",
+        "n_characters = len(suspect_letter)\n",
+        "print(n_characters)\n",
         "\n",
         "# Lowercase all the suspect letter ⬇️\n",
+        "letter_lowered = suspect_letter.lower()\n",
+        "print(letter_lowered)\n",
         "\n",
         "# Replace the symbols [.,-'] ⬇️\n",
+        "letter_clean = letter_lowered.replace(\".\", \"\")\n",
+        "letter_clean = letter_clean.replace(\"-\", \"\")\n",
+        "letter_clean = letter_clean.replace(\",\", \"\")\n",
+        "letter_clean = letter_clean.replace(\"'\", \"\")\n",
+        "print(letter_clean)\n",
+        "\n",
         "\n",
         "# Check if `letter_clean` is a string with only letters ⬇️\n",
+        "print(letter_clean.isalpha())\n",
         "\n",
         "# Check if `letter_clean` contains the word \"message\" ⬇️\n",
+        "message_in_letter_clean = \"message\" in letter_clean\n",
+        "print(message_in_letter_clean)\n",
         "\n",
         "# Get the list of the words splitting the string `letter_clean` ⬇️\n",
+        "words = letter_clean.split(' ')\n",
+        "print(words)\n",
         "\n",
-        "# Count The number of words usning the function `len` ⬇️"
+        "# Count The number of words usning the function `len` ⬇️\n",
+        "n_words = len(words)\n",
+        "print(n_words)\n"
       ]
     },
     {
@@ -386,7 +437,9 @@
       },
       "outputs": [],
       "source": [
-        "# Print the final analysis ⬇️\n"
+        "# Print the final analysis ⬇️\n",
+        "message = f\"The number of characters of the message is {n_characters}. The number of words counted are {n_words}. The result of the word 'message' in the text is: {message_in_letter_clean}\"\n",
+        "print(message)"
       ]
     },
     {
@@ -456,6 +509,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 1\n",
+        "inventory_pick = [inventory[3], inventory[-1]]\n",
+        "print(inventory_pick)\n",
+        "\n",
+        "# 2\n",
+        "inventory[4] = \"gold\"\n",
+        "print(inventory)\n",
+        "\n",
+        "# 3\n",
+        "inventory.append(\"local map\")\n",
+        "print(inventory)\n",
+        "\n",
+        "# 4\n",
+        "inventory_slice = inventory[2:4+1]\n",
+        "print(inventory_slice)\n",
+        "\n",
+        "# 5\n",
+        "inventory_sort = sorted(inventory)\n",
+        "print(inventory_sort)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6d1iE9eoaWye"
@@ -516,7 +596,40 @@
       },
       "outputs": [],
       "source": [
-        "# Start coding here ⬇️"
+        "# Start coding here ⬇️\n",
+        "## 1 and 2\n",
+        "gadgets_inventory = ({\"Smartphone\": 50, \"Headphones\": 100, \"Tablet\": 25})\n",
+        "print(gadgets_inventory)\n",
+        "\n",
+        "## 3\n",
+        "gadgets_inventory.update({\"Laptop\": 75, \"Smartwatch\": 30})\n",
+        "print(gadgets_inventory)\n",
+        "\n",
+        "## 4\n",
+        "gadgets_inventory[\"Smartphone\"] = 60\n",
+        "print(f\"After: {gadgets_inventory}\")\n",
+        "\n",
+        "## 5\n",
+        "tablet_stock = gadgets_inventory[\"Tablet\"]\n",
+        "print(\"Tablet Stock:\", tablet_stock)\n",
+        "\n",
+        "## 6\n",
+        "del gadgets_inventory[\"Headphones\"]\n",
+        "print(gadgets_inventory)\n",
+        "\n",
+        "## 7\n",
+        "if \"Laptop\" in gadgets_inventory: print(\"Laptop is in the dictionary.\")\n",
+        "else: print(\"Laptop is not in the dictionary.\")\n",
+        "\n",
+        "## 8\n",
+        "new_gadgets = ['Camera', 'Smart Scale', 'Fitness Tracker']\n",
+        "new_quantities = [10, 15, 20]\n",
+        "gadgets_inventory_new = dict(zip(new_gadgets, new_quantities))\n",
+        "print(gadgets_inventory_new)\n",
+        "\n",
+        "## 9\n",
+        "gadgets_inventory.update(gadgets_inventory_new)\n",
+        "print(gadgets_inventory)\n"
       ]
     },
     {
@@ -565,8 +678,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Age: 27\n",
             "Name: Ro\n",
@@ -640,18 +753,16 @@
       },
       "outputs": [],
       "source": [
-        "black_list = {\n",
-        "    \"Juan Varas\": \"65941354-A\",\n",
-        "    \"María López\": \"98765432-Z\",\n",
-        "    \"Carlos García\": \"56789012-M\",\n",
-        "    \"Ana Rodríguez\": \"34567890-Y\",\n",
-        "    \"Luis Urbión\": \"13508940-X\",\n",
-        "    \"Sofía Fernández\": \"51849732-B\",\n",
-        "    \"Pedro González\": \"60684930-C\",\n",
-        "    \"Elena Torres\": \"91736482-D\",\n",
-        "    \"Javier Bravo\": \"08566074-E\",\n",
-        "    \"Laura Sánchez\": \"76941572-F\"\n",
-        "}"
+        "black_list = { \"65941354-A\": \"Juan Varas\",\n",
+        "              \"98765432-Z\": \"María López\",\n",
+        "              \"56789012-M\": \"Carlos García\",\n",
+        "              \"34567890-Y\": \"Ana Rodríguez\",\n",
+        "              \"13508940-X\": \"Luis Urbión\",\n",
+        "              \"51849732-B\": \"Sofía Fernández\",\n",
+        "              \"60684930-C\": \"Pedro González\",\n",
+        "              \"91736482-D\": \"Elena Torres\",\n",
+        "              \"08566074-E\": \"Javier Bravo\",\n",
+        "              \"76941572-F\": \"Laura Sánchez\" }"
       ]
     },
     {
@@ -666,8 +777,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Enter DNI: 98765432-Z\n",
             "Enter First and Last Name: María López\n",
@@ -744,6 +855,101 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### The corrupted text files\n",
+        "\n",
+        "As an anthropologist on the brink of publishing groundbreaking research, your computer system has fallen victim to a virus. The virus corrupted your research documents, replacing vital letters with symbols. To salvage your work, you must craft a Python script to reverse these symbol replacements.\n",
+        "\n",
+        "You have a text named \"corrupted_file\" containing all your research about black holes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "corrupted_file = \"\"\"\n",
+        "Bl%ck h/l¿#, ¿nigm%tic c/#mic /bj¿ct# b/(n f(/m th¿ g(%vit%ti/n%l c/ll%@#¿ /f m%##iv¿ #t%(#, h%v¿ c%@tiv%t¿d #ci¿nti#t# %nd th¿ @&blic %lik¿ f/( d¿c%d¿#. R¿c¿nt (¿#¿%(ch h%# #h¿d n¿* light /n th¿i( f/(m%ti/n, @(/@¿(ti¿#, %nd @(/f/&nd infl&¿nc¿ /n th¿ &niv¿(#¿. On¿ k¿y %dv%nc¿m¿nt i# th¿ &nd¿(#t%nding /f #&@¿(m%##iv¿ bl%ck h/l¿# %t g%l%ctic c¿nt¿(#, #&gg¿#ting th¿i( (/l¿ in g%l%xy ¿v/l&ti/n.\n",
+        "\n",
+        "Evid¿nc¿ f/( th¿ ¿xi#t¿nc¿ /f int¿(m¿di%t¿-m%## bl%ck h/l¿# h%# %l#/ #&(f%c¿d, ch%ll¿nging /&( @(¿c/nc¿@ti/n# %b/&t th¿i( f/(m%ti/n m¿ch%ni#m#. T¿chn/l/gic%l %dv%nc¿m¿nt#, #&ch %# g(%vit%ti/n%l *%v¿ d¿t¿ct/(#, h%v¿ &#h¿(¿d in % n¿* ¿(% /f bl%ck h/l¿ ¿x@l/(%ti/n, ¿n%bling th¿ d¿t¿cti/n /f m¿(g¿(# %nd th¿ #t&dy /f th¿i( @(/@¿(ti¿#.\n",
+        "\n",
+        "Th¿#¿ finding# h%v¿ f%(-(¿%ching im@lic%ti/n#, f(/m th¿ v%lid%ti/n /f Ein#t¿in'# th¿/(y /f g¿n¿(%l (¿l%tivity t/ in#ight# int/ th¿ n%t&(¿ /f d%(k m%tt¿(. Bl%ck h/l¿# c/ntin&¿ t/ b¿ % (ich #/&(c¿ /f di#c/v¿(y, /ff¿(ing % glim@#¿ int/ th¿ f&nd%m¿nt%l */(king# /f /&( &niv¿(#¿ %nd it# hi#t/(y. F&t&(¿ (¿#¿%(ch @(/mi#¿# t/ &n(%v¿l m/(¿ #¿c(¿t# /f th¿#¿ c/#mic ¿nigm%#.\n",
+        "\"\"\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "After closer examination, you've identified the symbols that correspond to specific letters in your corrupted research. To recover the file, you've painstakingly created a Python dictionary mapping symbols to their respective letters. This dictionary will be a valuable tool in restoring your critical research data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "bugs = {'%': 'a',\n",
+        "        '¿': 'e',\n",
+        "        '#': 's',\n",
+        "        '*': 'w',\n",
+        "        '(': 'r',\n",
+        "        '/': 'o',\n",
+        "        '&': 'u',\n",
+        "        '@': 'p'}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Your task is to create a Python script that fixes the corrupted file and saves the corrected version in a new variable named \"fixed_file.\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Black holes, enigmatic cosmic objects born from the gravitational collapse of massive stars, have captivated scientists and the public alike for decades. Recent research has shed new light on their formation, properties, and profound influence on the universe. One key advancement is the understanding of supermassive black holes at galactic centers, suggesting their role in galaxy evolution.\n",
+            "\n",
+            "Evidence for the existence of intermediate-mass black holes has also surfaced, challenging our preconceptions about their formation mechanisms. Technological advancements, such as gravitational wave detectors, have ushered in a new era of black hole exploration, enabling the detection of mergers and the study of their properties.\n",
+            "\n",
+            "These findings have far-reaching implications, from the validation of Einstein's theory of general relativity to insights into the nature of dark matter. Black holes continue to be a rich source of discovery, offering a glimpse into the fundamental workings of our universe and its history. Future research promises to unravel more secrets of these cosmic enigmas.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create the fixed_file variable\n",
+        "fixed_file = \"\"\n",
+        "\n",
+        "# Loop through the corrupted file\n",
+        "for character in corrupted_file:\n",
+        "  # check if character is in bugs\n",
+        "  if character in bugs:\n",
+        "    decrypted_symbol = bugs[character]\n",
+        "    fixed_file = fixed_file + decrypted_symbol\n",
+        "  else:\n",
+        "    fixed_file = fixed_file + character\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Print the fixed file\n",
+        "print(fixed_file)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ZlTTfoHIaWyg"
       },
@@ -761,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "Ovhz8qzEaWyg"
       },
@@ -769,52 +975,25 @@
       "source": [
         "# Your base variables\n",
         "encrypted_message = \"20 8 5 0 13 9 19 19 9 12 5 0 23 1 19 0 12 1 21 14 3 8 5 4 0 20 8 9 19 0 13 15 18 14 9 14 7 0 1 20 0 20 23 5 12 22 5 0 1 13\"\n",
-        "alphabet = \"abcdefghijklmnopqrstuvwxyz\""
+        "alphabet = \" abcdefghijklmnopqrstuvwxyz\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 17,
       "metadata": {
-        "id": "lr5dFkQEaWyh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "lr5dFkQEaWyh",
         "outputId": "b172a293-a751-4798-aa5c-33ac00ceb1aa"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "['20', '8', '5', '0', '13', '9', '19', '19', '9', '12', '5', '0', '23', '1', '19', '0', '12', '1', '21', '14', '3', '8', '5', '4', '0', '20', '8', '9', '19', '0', '13', '15', '18', '14', '9', '14', '7', '0', '1', '20', '0', '20', '23', '5', '12', '22', '5', '0', '1', '13']\n",
-            "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-            "1: a\n",
-            "2: b\n",
-            "3: c\n",
-            "4: d\n",
-            "5: e\n",
-            "6: f\n",
-            "7: g\n",
-            "8: h\n",
-            "9: i\n",
-            "10: j\n",
-            "11: k\n",
-            "12: l\n",
-            "13: m\n",
-            "14: n\n",
-            "15: o\n",
-            "16: p\n",
-            "17: q\n",
-            "18: r\n",
-            "19: s\n",
-            "20: t\n",
-            "21: u\n",
-            "22: v\n",
-            "23: w\n",
-            "24: x\n",
-            "25: y\n",
-            "26: z\n"
+            "the missile was launched this morning at twelve am\n"
           ]
         }
       ],
@@ -825,22 +1004,14 @@
         "decrypted_message = \"\"\n",
         "\n",
         "## Convert encrypted message string to list\n",
-        "encrypted_message = \"20 8 5 0 13 9 19 19 9 12 5 0 23 1 19 0 12 1 21 14 3 8 5 4 0 20 8 9 19 0 13 15 18 14 9 14 7 0 1 20 0 20 23 5 12 22 5 0 1 13\"\n",
-        "print(encrypted_message.split())\n",
+        "encrypted_numbers = encrypted_message.split()\n",
         "\n",
         "## Convert alphabet string to list\n",
-        "alphabet = \"abcdefghijklmnopqrstuvwxyz\"\n",
-        "alphabet_letter = list(alphabet)\n",
-        "print(alphabet_letter)\n",
+        "for code in encrypted_numbers:\n",
+        "  code_mapped = alphabet[int(code)]\n",
+        "  decrypted_message = decrypted_message + code_mapped\n",
         "\n",
-        "## For loop to iterate through numbers in encrypted message\n",
-        "for i in range(len(alphabet_letter)):\n",
-        "    letter = alphabet_letter[i]\n",
-        "    number = i + 1\n",
-        "    print(f\"{number}: {letter}\")\n",
-        "\n",
-        "## Append decrypted letters\n",
-        "\n"
+        "print(decrypted_message)\n"
       ]
     },
     {
@@ -869,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "gH7-xX7iaWyh"
       },
@@ -880,20 +1051,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "KTDLqi_FaWyl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "|-->->>--|->--->-->>-|-<<<<--<<<-|>>->-->>>-->-|\n"
+          ]
+        }
+      ],
       "source": [
-        "# Code your algorithm here ⬇️"
+        "# Code your algorithm here ⬇️\n",
+        "tidy_warehouse = \"\"\n",
+        "\n",
+        "first = True\n",
+        "for slot in warehouse:\n",
+        "\n",
+        "  if slot == \"|\":\n",
+        "    first = True\n",
+        "\n",
+        "  if slot in \"><\":\n",
+        "    if first:\n",
+        "      key_plane = slot\n",
+        "      tidy_warehouse = tidy_warehouse + key_plane\n",
+        "    else:\n",
+        "      tidy_warehouse = tidy_warehouse + key_plane\n",
+        "    first = False\n",
+        "  else:\n",
+        "    tidy_warehouse = tidy_warehouse + slot\n",
+        "\n",
+        "print(tidy_warehouse)"
       ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
