Exercises completed until DNA sequence

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Rrrrrroar/ai-applied-practice/blob/main/unit-1/11_introduction_to_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -511,7 +511,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "ZXvBwhxm0tT9"
+      },
       "outputs": [],
       "source": [
         "# 1\n",
@@ -855,7 +857,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "0yx1jQpR0tUE"
+      },
       "source": [
         "#### The corrupted text files\n",
         "\n",
@@ -866,8 +870,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ReKArXxR0tUE"
+      },
       "outputs": [],
       "source": [
         "corrupted_file = \"\"\"\n",
@@ -881,15 +887,19 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "lBIJBkus0tUF"
+      },
       "source": [
         "After closer examination, you've identified the symbols that correspond to specific letters in your corrupted research. To recover the file, you've painstakingly created a Python dictionary mapping symbols to their respective letters. This dictionary will be a valuable tool in restoring your critical research data."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "kmikhZEp0tUF"
+      },
       "outputs": [],
       "source": [
         "bugs = {'%': 'a',\n",
@@ -904,15 +914,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "A-NIlsPJ0tUJ"
+      },
       "source": [
         "Your task is to create a Python script that fixes the corrupted file and saves the corrected version in a new variable named \"fixed_file.\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "GfmRlGrC0tUJ",
+        "outputId": "d2bd0505-6802-4bbd-99a6-ac7b92336a0e"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -941,9 +956,6 @@
         "  else:\n",
         "    fixed_file = fixed_file + character\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
         "# Print the fixed file\n",
         "print(fixed_file)\n"
       ]
@@ -967,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "Ovhz8qzEaWyg"
       },
@@ -980,7 +992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1011,7 +1023,19 @@
         "  code_mapped = alphabet[int(code)]\n",
         "  decrypted_message = decrypted_message + code_mapped\n",
         "\n",
+        "\n",
         "print(decrypted_message)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "gH7-xX7iaWyh"
+      },
+      "outputs": [],
+      "source": [
+        "warehouse = \"|-->-><--|->---<--<<-|-<<<>--<<>-|><-<--<>>--<-|\""
       ]
     },
     {
@@ -1040,20 +1064,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
-        "id": "gH7-xX7iaWyh"
-      },
-      "outputs": [],
-      "source": [
-        "warehouse = \"|-->-><--|->---<--<<-|-<<<>--<<>-|><-<--<>>--<-|\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "KTDLqi_FaWyl"
+        "id": "KTDLqi_FaWyl",
+        "outputId": "26459a83-19b4-45b1-a096-a398cfd351ed"
       },
       "outputs": [
         {
@@ -1086,12 +1100,84 @@
         "\n",
         "print(tidy_warehouse)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### The DNA sequence"
+      ],
+      "metadata": {
+        "id": "1LUbSAVHN2dg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You are a geneticist in charge of analyzing DNA sequences. You have a  DNA sequence, and you need to count the total number of adenine (A) bases in the sequence. Create a variable like adenine_counter starting at zero. Use a for loop to iterate through the sequence, count the adenine (A) and add it to the adenine_counter.\n",
+        "\n",
+        "Finally print the message \"Process finished with a total count of X adenine (A) bases.\"\n"
+      ],
+      "metadata": {
+        "id": "jvZRHO1cOEwU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dna_sequence = \"ATATCGCGATATCGATAGCCTAGCTAGCTAGCTAGCTAG\"\n"
+      ],
+      "metadata": {
+        "id": "KS6V3Bh-OKxd"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a variable to count the adenine bases\n",
+        "adenine_counter = \"\"\n",
+        "\n",
+        "# Create a loop to iterate through the sequence\n",
+        "for base in dna_sequence:\n",
+        "  if base == \"A\":\n",
+        "    adenine_counter = adenine_counter + base\n",
+        "  else:\n",
+        "    pass\n",
+        "\n",
+        "print(adenine_counter)\n",
+        "\n",
+        "## Count the number of adenines in the adenine counter\n",
+        "len(adenine_counter)\n",
+        "\n",
+        "# Print the final message\n",
+        "print(f\"Process finished with a total count of {len(adenine_counter)} adenine (A) bases.\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5QaYTpvJObAu",
+        "outputId": "20c7caf0-ec16-43e3-abdb-ad3a8445bb54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AAAAAAAAAAA\n",
+            "Process finished with a total count of 11 adenine (A) bases.\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
