Exercises completed until DNA sequence

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -1150,18 +1150,18 @@
         "## Count the number of adenines in the adenine counter\n",
         "len(adenine_counter)\n",
         "\n",
-        "# Print the final message\n",
+        "## Print the final message\n",
         "print(f\"Process finished with a total count of {len(adenine_counter)} adenine (A) bases.\")\n",
         "\n"
       ],
       "metadata": {
-        "id": "5QaYTpvJObAu",
-        "outputId": "20c7caf0-ec16-43e3-abdb-ad3a8445bb54",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5QaYTpvJObAu",
+        "outputId": "2cda129b-a75c-4ff8-f02f-a8b8ead847a8"
       },
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
