Exercises completed until DNA sequence

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -1135,10 +1135,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create a variable to count the adenine bases\n",
+        "# Determine the total number of adenine (A) bases in the sequence\n",
+        "\n",
+        "## Create a variable to count the adenine bases\n",
         "adenine_counter = \"\"\n",
         "\n",
-        "# Create a loop to iterate through the sequence\n",
+        "## Create a loop to iterate through the sequence\n",
         "for base in dna_sequence:\n",
         "  if base == \"A\":\n",
         "    adenine_counter = adenine_counter + base\n",
